--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
 
     .navbar {
-      background: url('./images/desktop/image-hero.jpg') no-repeat center center/cover;
+      background: url('./images/desktop/image-hero.jpgimages/desktop/image-hero.jpg') no-repeat center center/cover;
       height: 100vh;
       position: relative;
       display: flex;
