--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     body {
       margin: 0;
       font-family: 'Josefin Sans', sans-serif;
-      background: #fff;
       color: #000;
       scroll-behavior: smooth;
     }
@@ -36,7 +35,7 @@
     }
 
     .navbar {
-      background: url('./images/desktop/image-hero.jpgimages/desktop/image-hero.jpg') no-repeat center center/cover;
+      background: url('./images/desktop/image-hero.jpg') no-repeat center center/cover;
       height: 100vh;
       position: relative;
       display: flex;
