--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
       margin: 0;
       font-family: 'Josefin Sans', sans-serif;
-      color: #000;
+      /* color: #000; */
       scroll-behavior: smooth;
     }
 
@@ -51,11 +51,11 @@
       border: none;
     }
     .navbar-brand{
-      color:#fff;
+      /* color:#fff; */
       font-size: 40px;
     }
     .nav-item{
-        color:#fff;
+        /* color:#fff; */
       font-size: 20px;
 
     }
