--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       opacity: 0.7;
       margin-top: 10px;
     }
-    @media (max-width: 1100px) {
+    /* @media (max-width: 1100px) {
     .creations-grid {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -264,7 +264,7 @@
         width: 100%;
         max-width: 500px;
     }
-}
+} */
 @media (max-width: 700px) {
     .navbar-container, .footer-container, .main, .creations-section {
         padding: 0 16px;
