--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
 
     .navbar {
-      background: url('./images/desktop/image-hero.jpg') no-repeat center center/cover;
+      background-image:url('images/desktop/image-hero.jpg;')   no-repeat center center/cover;
       height: 100vh;
       position: relative;
       display: flex;
