--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="loopstudios-landing-page-main/images/favicon-32x32.png">
-  <!-- <link href="index.css" rel="stylesheet"> -->
+  <link href="index.css" rel="stylesheet">
 </head>
  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -35,7 +35,8 @@
     }
 
     .navbar {
-      background-image:url('images/desktop/image-hero.jpg;')   no-repeat center center/cover;
+      background-image:url('https://res.cloudinary.com/ddfcytozf/image/upload/v1748251541/image-hero_dxorzh.jpgimages/desktop/image-hero.jpg');
+      background-size: cover;
       height: 100vh;
       position: relative;
       display: flex;
@@ -251,7 +252,7 @@
       opacity: 0.7;
       margin-top: 10px;
     }
-    /* @media (max-width: 1100px) {
+    @media (max-width: 1100px) {
     .creations-grid {
         grid-template-columns: repeat(2, 1fr);
     }
@@ -264,7 +265,7 @@
         width: 100%;
         max-width: 500px;
     }
-} */
+}
 @media (max-width: 700px) {
     .navbar-container, .footer-container, .main, .creations-section {
         padding: 0 16px;
@@ -309,12 +310,12 @@
         width: 100%;
         max-width: 500px;
       }
-   /* .navbar-nav{
+   .navbar-nav{
         flex-direction: column;
         align-items: flex-end;
         justify-self: flex-end;
         border-inline-start-color: #fff;
-    } */
+    }
     .footer-container {
         flex-direction: column;
         column-count: 1;
@@ -379,7 +380,7 @@
         </ul>
       </div>
     </div>
-       <div class="hero-text-box position-absoulte top-50  end-40 d-flex flex-direction-row justify-content-flex-start align-items-flex-start border border-2 border-white p-4">
+       <div class="hero-text-box position-absolute ... top-50  end-40 d-flex flex-direction-row justify-content-flex-start align-items-flex-start border border-2 border-white p-4">
       <h1>IMMERSIVE<br>EXPERIENCES<br>THAT DELIVER</h1>
     </div>
   </nav>
