--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         </ul>
       </div>
     </div>
-       <div class="hero-text-box position-absolute ... top-50  end-40 d-flex flex-direction-row justify-content-flex-start align-items-flex-start border border-2 border-white p-4">
+       <div class="hero-text-box position-absolute ..." top-50  end-40 d-flex flex-direction-row justify-content-flex-start align-items-flex-start border border-2 border-white p-4">
       <h1>IMMERSIVE<br>EXPERIENCES<br>THAT DELIVER</h1>
     </div>
   </nav>
