--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
 
     .navbar {
-      background-image:url('https://res.cloudinary.com/ddfcytozf/image/upload/v1748251541/image-hero_dxorzh.jpgimages/desktop/image-hero.jpg');
+      background-image:url('/desktop/image-hero.jpg');
       background-size: cover;
       height: 100vh;
       position: relative;
