--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     }
 
     .navbar {
-      background-image:url('/desktop/image-hero.jpg');
+      background-image:url('![image-hero](https://github.com/user-attachments/assets/ca804e94-19a7-4e11-bea2-81c980e6a8b7)');
       background-size: cover;
       height: 100vh;
       position: relative;
