--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Frontend Mentor | Loopstudios landing page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="loopstudios-landing-page-main/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link href="index.css" rel="stylesheet">
 </head>
  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
